Changed the background of the Calculator

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
 }
 
 .calculator {
-    background-color: antiquewhite;
+    background-color: gray;
     width: 370px;
     height: 350px;
     margin: auto;
