Added commander deck to mtg.html

--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,10 @@ h1 {
 .btn:hover, .equals:hover {
     background-color: white;
 }
+
+/*Styles for MTG page*/
+
+.mtgContainer{
+    display: inline;
+    
+}
